# movement-engine

./: .gitignore  .weapon_impl_complete  .weapon_impl_notes  CLAUDE.md  CMakeLists.txt
.github/workflows/: windows.yml
assets/: Door.glb  Kunai.glb  Ladder.glb  wingman.glb
assets/fonts/Daydream/: READ ME.rtf
docs/: DEMO_TODO.md  MISSING_FEATURES.md  PROJECT_STRUCTURE.md
levels/: README.md  generate_test_arena.py  test_arena.glb
src/: audio.cpp  audio.h  bomber.cpp  bomber.h  bullet_mods.h  bvh.cpp  bvh.h  camera.h  collision.cpp  collision.h  config.cpp  config.h  damage_numbers.cpp  damage_numbers.h  debug_menu.cpp  debug_menu.h  drone.cpp  drone.h  effects.cpp  effects.h  entity.h  entity_render.cpp  entity_render.h  game_state.h  geo_types.h  hud.cpp  hud.h  keybinds.h  level_loader.cpp  level_loader.h  magazine_view.cpp  magazine_view.h  main.cpp  mesh.cpp  mesh.h  player.cpp  player.h  procgen.cpp  procgen.h  renderer.cpp  (+16 more)
src/shaders/: mesh.frag  mesh.vert  particle.frag  particle.vert  triangle.vert
